# Cato

./: .gitignore  CATO_ALEX_AUDIT.md  CATO_KRAKEN_VERDICT.md  CLAUDE.md  HKO_TRUTH_AUDIT.md  HKO_TRUTH_AUDIT_CATO_INTEGRATIONS.md  OPENCLAW_HERMES_BRAINSTORM_AND_BUILDSPEC.md  PROJECT_BLACKBOX_AUDIT.md  README.md  cato_service.py  cato_svc_runner.py  cato_telegram_bridge.py  genesis-agent-test-prompt.md  install_autostart.py  launch_daemon.ps1  pyproject.toml  run_tests.bat  start_cato.bat  start_daemon.ps1
.github/workflows/: python-verify.yml
Desktop App Ralph Loop/: AGENTS.md
HKO-audit-output/: HKO-certificate-ben-assistant.md  HKO-certificate.md  HKO-truth-audit-report.md
Web UI Ralph Loop/: AGENTS.md
cato/: agent_loop.py  budget.py  cli.py  config.py  doctor.py  gateway.py  progress.py  router.py  routing_log.py  safety.py  swarmsync.py  vault.py  vault_crypto.py
cato/adapters/: gmail_adapter.py  telegram.py
cato/api/: integration_routes.py  memory_routes.py  pty_routes.py  routes.py  websocket_handler.py
cato/audit/: audit_log.py
cato/auth/: token_checker.py
cato/core/: compactor.py  context_builder.py  context_pool.py  memory.py  memory_upkeep.py  personal_store.py
cato/integrations/: __init__.py  credentials.py  http_client.py  registry.py  runtime.py
cato/mcp/: runtime.py  windows_client.py
cato/orchestrator/: cli_invoker.py  pty_session.py
cato/pipeline/: runtime.py
desktop/: build_release.ps1
docs/: genesis_marketplace_plan.md
scripts/: install_genesis_skills.py  run_watchdog.bat
tests/: test_activity_indicator.py  test_auth_security.py  test_bh011_tool_indicator.py  test_budget.py  test_cli_pid_liveness.py  test_compaction.py  test_compactor.py  test_config_normalization.py  test_daily_logs.py  test_delegation_tokens.py  test_e2e_cato.py  test_e2e_full_pipeline.py  test_e2e_message_submission.py  test_file_tool.py  test_genesis_tool.py  test_gmail_adapter.py  test_gmail_adapter_schema.py  test_inbox_api.py  test_integration_routes.py  test_integrations.py  test_mcp_runtime.py  test_personal_store.py  test_port_fallback_integration.py  test_progress_emitter.py  test_pty_routes_integration.py  test_router.py  test_shell_security.py  test_skill_activation.py  test_slot_budget.py  test_start_channel.py  test_swarmsync.py  test_swarmsync_routing_log.py  test_telegram_security.py  test_tool_approval_policy.py  test_tool_call_pairing.py  test_tool_call_protocol.py  test_tool_registration.py  test_ui_server_runtime_health.py  test_vault_crypto.py  test_websocket_handler.py  (+1 more)
(+34 files in other folders)
